test/yacc/inherit2.error
YACC: e - line 26 of "./test/inherit2.y", syntax error
%type <nlist> declaration namelist(<cval>, <tval>) locnamelist(<tval>)
                                  ^
